# blockchain-node

./: .dockerignore  .gitguardian.yaml  .gitignore  .rustfmt.toml  .secrets.baseline  BLOCKCHAIN_CHECKLIST.md  BLOCKCHAIN_INFRASTRUCTURE_WIKI.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-new  Dockerfile.secure  Dockerfile.tests  PHASE3_DETAILED_PLAN.md  README.md  RUNTIME_UPGRADE_PHASE3.md  cargo-deny.toml  commit_and_push.sh  consensus.toml  ddc-storage-node-tests.json  docker-compose.monitoring.yml  docker-compose.yml  dprint.json  github-checks.sh  plain-v54113-patch2.json  raw-v54113-patch1.json  raw-v54113-patch2.json  raw.json  rust-toolchain.toml  rustfmt.toml  shell.nix  test-phase3-local.sh  test-security-components.sh  test-security-workflow.sh  test_dependencies.sh
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  error.rs  lib.rs
contracts/customer-deposit/: Cargo.toml  README.md  lib.rs  rust-toolchain.toml
contracts/customer-deposit/traits/: Cargo.toml  lib.rs
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/src/: cli.rs  command.rs  lib.rs  main.rs
node/client/: Cargo.toml
node/client/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs  secure_rpc.rs
node/runtime-interface-macro/: Cargo.toml
node/runtime-interface-macro/cere-wasm-interface/: Cargo.toml
node/runtime-interface-macro/cere-wasm-interface/src/: lib.rs
node/runtime-interface-macro/proc-macro/: Cargo.toml
node/runtime-interface-macro/proc-macro/src/: utils.rs
node/runtime-interface-macro/proc-macro/src/runtime_interface/: bare_function_interface.rs  host_function_interface.rs  mod.rs  trait_decl_impl.rs  wasm_interface.rs
node/runtime-interface-macro/src/: host.rs  impls.rs  lib.rs  pass_by.rs
node/runtime-interfaces/: Cargo.toml
node/runtime-interfaces/src/: cere_runtime.compact.compressed.9cbddef.wasm  dispatch_thunk_code.txt  freeing_bump.rs  lib.rs  node_runtime_266.wasm  node_runtime_50000.wasm  sandbox_instance.rs  sandbox_interface.rs  sandbox_util.rs  sandbox_wasmi_backend.rs  util.rs  wasmi_backend.rs  wasmi_executor.rs  wasmi_function_executor.rs  wasmtime_executor.rs
node/service/: Cargo.toml
node/service/chain-specs/: example.json
node/service/src/: chain_spec.rs  chain_spec.rs.backup  config_validation.rs  lib.rs  network_security.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/chainbridge/: Cargo.toml
pallets/chainbridge/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/dac-registry/: Cargo.toml  README.md
pallets/dac-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ddc/: Cargo.toml  README.md
pallets/ddc-clusters/: Cargo.toml
pallets/ddc-clusters-gov/: Cargo.toml
pallets/ddc-clusters-gov/src/: benchmarking.rs  lib.rs  mock.rs  mock_clusters_gov.rs  tests.rs  weights.rs
pallets/ddc-clusters/src/: benchmarking.rs  cluster.rs  executor.rs  lib.rs  migration.rs  migrations.rs  mock.rs  node_provider_auth.rs  offchain.rs  testing_utils.rs  tests.rs  weights.rs
pallets/ddc-clusters/src/test_data/: metadata.json  node_provider_auth_white_list.wasm
pallets/ddc-customers/: Cargo.toml
pallets/ddc-customers/src/: benchmarking.rs  benchmarking_customer_deposit.wasm  lib.rs  migration.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ddc-metrics-offchain-worker/: Cargo.toml  README.md
pallets/ddc-metrics-offchain-worker/src/: lib.rs
pallets/ddc-metrics-offchain-worker/src/tests/: mod.rs  test_runtime.rs
pallets/ddc-nodes/: Cargo.toml
pallets/ddc-nodes/src/: benchmarking.rs  cdn_node.rs  lib.rs  migrations.rs  mock.rs  node.rs  storage_node.rs  testing_utils.rs  tests.rs  weights.rs
pallets/ddc-payouts/: Cargo.toml
pallets/ddc-payouts/src/: archive_tests.rs  benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ddc-staking/: Cargo.toml  README.md
pallets/ddc-staking/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
pallets/ddc-validator/: Cargo.toml  README.md
pallets/ddc-validator/src/: dac.rs  lib.rs  mock.rs  payments.rs  shm.rs  tests.rs  utils.rs  validation.rs
pallets/ddc-validator/src/mock-data/set-1/: aggregated-node-data-for-era.json  (+7 more)
pallets/ddc-validator/src/mock_data/: aggregation:nodes:era:edge.json  data:file:6e86ac08-4af9-4353-9fec-0f3e563661d6.json  data:file:7af575b7-9a83-40b6-88a7-19549b9bbc38.json  data:file:80a62530-fd76-40b5-bc53-dd82365e89ce.json  data:file:84640a53-fc1f-4ac5-921c-6695056840bc.json  data:file:d0a55c8b-fcb9-41b5-aa9a-8b40e9c4edf7.json  shared:nodes:era.json
pallets/ddc-validator/src/proto/: activity_record_api.proto  aggregated_state.proto  file_api.proto  invalid_record.proto
pallets/ddc-verification/: Cargo.toml  build.rs
pallets/ddc-verification/src/: aggregate_tree.rs  aggregator_client.rs  benchmarking.rs  extensons.rs  insp_ddc_api.rs  insp_task_manager.rs  lib.rs  migrations.rs  mock.rs  signature.rs  tests.rs  weights.rs
pallets/ddc-verification/src/demo/: mod.rs
pallets/ddc-verification/src/protos/: inspection.proto
pallets/ddc-verification/src/test_data/: activity_buckets_signed_resp.json
pallets/ddc/src/: lib.rs  mock.rs  tests.rs
pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/erc721/: Cargo.toml
pallets/erc721/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/fee-handler/: Cargo.toml
pallets/fee-handler/src/: benchmarking.rs  lib.rs  mock.rs  mocks.rs  tests.rs  weights.rs
pallets/network-monitor/: Cargo.toml
pallets/network-monitor/src/: lib.rs
pallets/origins/: Cargo.toml
pallets/origins/src/: lib.rs
primitives/: Cargo.toml  build.rs
primitives/src/: aggregator.rs  cluster.rs  lib.rs  ocw_mutex.rs  signature.rs
primitives/src/traits/: bucket.rs  cluster.rs  cluster_gov.rs  customer.rs  era.rs  mod.rs  node.rs  pallet.rs  payout.rs  session.rs  staking.rs  validator.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
traits/: Cargo.toml
traits/src/: cluster.rs  customer.rs  lib.rs  node.rs  pallet.rs  staking.rs  treasury.rs  validator.rs
(+214 files in other folders)
