[workspace.package]
version = "7.3.3"
authors = ["Cerebellum-Network"]
edition = "2021"
homepage = "https://cere.network/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Cerebellum-Network/blockchain-node"

[workspace]
members = [
  "node/cli",
  "node/client",
  "node/rpc",
  "node/service",
  "pallets/chainbridge",
  "pallets/ddc-clusters",
  "pallets/ddc-customers",
  "pallets/ddc-nodes",
  "pallets/ddc-staking",
  "pallets/erc20",
  "pallets/erc721",
  # "pallets/ddc-clusters-gov", # TEMPORARILY DISABLED due to trait compatibility issues
  "pallets/fee-handler",
  "pallets/network-monitor",
  "pallets/origins",
  "runtime/cere",
  "runtime/cere-dev",
]
resolver = "2"

[workspace.dependencies]
# 3rd-party dependencies
anyhow = { version = "1.0", default-features = false }
base64ct = { version = "=1.6.0" }
blake2 = { version = "0.10.6", default-features = false }
byte-unit = { version = "4.0.19", default-features = false, features = ["u128"] }
chrono = { version = "0.4.31", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.30" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "^0.4.1", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false, features = ["server"] }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
polkadot-ckb-merkle-mountain-range = { version = "0.7.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.1", default-features = false }
serde_with = { version = "3", default-features = false, features = ["base64", "macros"] }
static_assertions = { version = "1.1.0" }
url = { version = "2.5.2" }
array-bytes = { version = "6.2.2" }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
scopeguard = { version = "1.2.0", default-features = false }

# Substrate Dependencies
# Please keey format such that:
# dependency-name = { git = "X", tag = "Y", default-features = false }
frame-benchmarking = { version = "40.0.0", default-features = false }
frame-benchmarking-cli = { version = "47.0.0", default-features = false }
frame-election-provider-support = { version = "40.1.0", default-features = false }
frame-executive = { version = "40.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false, features = ["tuples-96"] }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
pallet-authority-discovery = { version = "40.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-babe = { version = "40.0.0", default-features = false }
pallet-bags-list = { version = "39.1.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-bounties = { version = "39.0.0", default-features = false }
pallet-child-bounties = { version = "39.0.0", default-features = false }
pallet-collective = { version = "40.1.0", default-features = false }
pallet-contracts = { version = "40.1.0", default-features = false }
pallet-democracy = { version = "40.1.0", default-features = false }
pallet-election-provider-multi-phase = { version = "39.1.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "39.0.0", default-features = false }
pallet-elections-phragmen = { version = "41.1.0", default-features = false }
pallet-fast-unstake = { version = "39.0.0", default-features = false }
pallet-grandpa = { version = "40.0.0", default-features = false }
pallet-identity = { version = "40.1.0", default-features = false }
pallet-im-online = { version = "39.1.0", default-features = false }
pallet-indices = { version = "40.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "28.0.0", default-features = false }
pallet-membership = { version = "40.0.0", default-features = false }
pallet-migrations = { version = "10.1.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-nomination-pools = { version = "38.1.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "38.0.0", default-features = false }
pallet-nomination-pools-runtime-api = { version = "36.0.0", default-features = false }
pallet-offences = { version = "39.0.0", default-features = false }
pallet-offences-benchmarking = { version = "40.0.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-recovery = { version = "40.0.0", default-features = false }
pallet-scheduler = { version = "41.0.0", default-features = false }
pallet-session = { version = "40.0.0", default-features = false, features = ["historical"] }
pallet-session-benchmarking = { version = "40.0.0", default-features = false }
pallet-staking = { version = "40.1.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-tips = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-treasury = { version = "39.0.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-vesting = { version = "40.1.0", default-features = false }
pallet-conviction-voting = { version = "40.1.0", default-features = false }
pallet-referenda = { version = "40.1.0", default-features = false }
pallet-whitelist = { version = "39.0.0", default-features = false }
sc-authority-discovery = { version = "0.49.0", default-features = false }
sc-basic-authorship = { version = "0.49.0", default-features = false }
sc-chain-spec = { version = "42.0.0", default-features = false }
sc-cli = { version = "0.51.0", default-features = false }
sc-client-api = { version = "39.0.0", default-features = false }
sc-consensus = { version = "0.48.0", default-features = false }
sc-consensus-babe = { version = "0.49.0", default-features = false }
sc-consensus-babe-rpc = { version = "0.49.0", default-features = false }
sc-consensus-epochs = { version = "0.48.0", default-features = false }
sc-consensus-grandpa = { version = "0.34.0", default-features = false }
sc-consensus-grandpa-rpc = { version = "0.34.0", default-features = false }
sc-consensus-slots = { version = "0.48.0", default-features = false }
sc-executor = { version = "0.42.0", default-features = false }
sc-network = { version = "=0.49.0", default-features = false }
sc-network-common = { version = "0.48.0", default-features = false }
sc-rpc = { version = "44.0.0", default-features = false }
sc-rpc-api = { version = "0.48.0", default-features = false }
sc-service = { version = "0.50.0", default-features = false }
sc-sync-state-rpc = { version = "0.49.0", default-features = false }
sc-sysinfo = { version = "42.0.0", default-features = false }
sc-telemetry = { version = "28.1.0", default-features = false }
sc-transaction-pool = { version = "39.0.0", default-features = false }
sc-transaction-pool-api = { version = "39.0.0", default-features = false }
sc-offchain = { version = "44.0.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-application-crypto = { version = "40.1.0", default-features = false }
sp-arithmetic = { version = "26.1.0", default-features = false }
sp-authority-discovery = { version = "36.0.0", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-blockchain = { version = "39.0.0", default-features = false }
sp-consensus = { version = "0.42.0", default-features = false }
sp-consensus-babe = { version = "0.42.1", default-features = false }
sp-consensus-grandpa = { version = "23.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false, features = ["serde"] }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-keystore = { version = "0.42.0", default-features = false }
sp-mmr-primitives = { version = "36.1.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-rpc = { version = "34.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-staking = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "36.0.0", default-features = false }
sp-tracing = { version = "17.1.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-transaction-storage-proof = { version = "36.1.0", default-features = false }
sp-trie = { version = "39.1.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "43.0.0", default-features = false }
substrate-state-trie-migration-rpc = { version = "42.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
pallet-delegated-staking = { version = "7.0.0", default-features = false }

# Cere Dependenies
cere-client = { path = "node/client" }
cere-dev-runtime = { path = "runtime/cere-dev" }
cere-rpc = { path = "node/rpc" }
cere-runtime = { path = "runtime/cere" }
cere-runtime-common = { path = "runtime/common", default-features = false }
cere-service = { path = "node/service" }
pallet-chainbridge = { path = "pallets/chainbridge", default-features = false }
pallet-ddc-clusters = { path = "pallets/ddc-clusters", default-features = false }
# pallet-ddc-clusters-gov = { path = "pallets/ddc-clusters-gov", default-features = false } # TEMPORARILY DISABLED due to trait compatibility issues
pallet-ddc-customers = { path = "pallets/ddc-customers", default-features = false }
pallet-ddc-nodes = { path = "pallets/ddc-nodes", default-features = false }
pallet-ddc-staking = { path = "pallets/ddc-staking", default-features = false }
pallet-erc20 = { path = "pallets/erc20", default-features = false }
pallet-erc721 = { path = "pallets/erc721", default-features = false }
pallet-network-monitor = { path = "pallets/network-monitor", default-features = false }
pallet-origins = { path = "pallets/origins", default-features = false }
pallet-fee-handler = { path = "pallets/fee-handler", default-features = false }

# Cere External Dependencies
ddc-primitives = { git = "https://github.com/Cerebellum-Network/ddc-primitives.git", branch = "dev", default-features = false }
ddc-api = { git = "https://github.com/Cerebellum-Network/ddc-api.git", branch = "dev", default-features = false }
# pallet-ddc-verification = { git = "https://github.com/Cerebellum-Network/ddc-verification.git", branch = "dev", default-features = false }
# pallet-ddc-payouts = { git = "https://github.com/Cerebellum-Network/ddc-payouts.git", branch = "dev", default-features = false }

# Hyperbridge
ismp = { default-features = false, version = "1.1.0" }
ismp-grandpa = { default-features = false, version = "2503.0.0" }
pallet-hyperbridge = { default-features = false, version = "2503.0.0" }
pallet-ismp = { default-features = false, version = "2503.0.0" }
pallet-ismp-rpc = { default-features = false, version = "2503.0.0" }
pallet-ismp-runtime-api = { default-features = false, version = "2503.0.0" }
pallet-token-gateway = { default-features = false, version = "2503.0.0" }

# Build profiles for different use cases
[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1

# Optimized profile for CI builds - faster compilation
[profile.fast-ci]
inherits = "release"
debug = false
lto = "off"
codegen-units = 16
incremental = true
opt-level = 1

# Profile for runtime builds - prioritizes size and performance
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

# KNOWN COMPATIBILITY ISSUES
#
# There are currently two main compatibility issues causing CI compilation failures:
#
# 1. XCM Compatibility Issue:
#    - The pallet-token-gateway dependency (version 2503.0.0) brings in staging-xcm-builder 20.1.1
#    - This version is missing newer trait methods: try_successful_origin, ensure_successful, ensure_concluded
#    - Resolution: Update Hyperbridge dependencies when newer compatible XCM versions are available
#
# 2. Pallet-Referenda Compatibility Issue:
#    - pallet-referenda v40.1.0 is missing newer Polling trait methods: create_ongoing, end_ongoing
#    - This causes compilation failures in the Polling trait implementation
#    - Resolution: Update to a newer pallet-referenda version when available or patch the trait compatibility
#
# Both issues are dependency version mismatches where external dependencies haven't been updated
# to support newer Substrate trait interfaces. These will be resolved when upstream dependencies
# are updated to match the current Substrate version expectations.
