[workspace.package]
version = "7.3.11"
authors = ["Cerebellum-Network"]
edition = "2021"
homepage = "https://cere.network/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Cerebellum-Network/blockchain-node"

[workspace]
members = [
  "node/cli",
  "node/client",
  "node/rpc",
  "node/service",
  "pallets/chainbridge",
  "pallets/ddc-clusters",
  "pallets/ddc-customers",
  "pallets/ddc-nodes",
  "pallets/ddc-staking",
  "pallets/erc20",
  "pallets/erc721",
  "pallets/ddc-clusters-gov",
  "pallets/origins",
  "pallets/fee-handler",
  "primitives",
  "runtime/cere",
  "runtime/cere-dev",
]
resolver = "2"

[workspace.dependencies]
# 3rd-party dependencies
anyhow = { version = "1.0", default-features = false }
base64ct = { version = "1.6.0" }
blake2 = { version = "0.10.6", default-features = false }
byte-unit = { version = "4.0.19", default-features = false, features = ["u128"] }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.5.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
futures = { version = "0.3.30" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "^0.4.1", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false, features = ["server"] }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
polkadot-ckb-merkle-mountain-range = { version = "0.7.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.1", default-features = false }
static_assertions = { version = "1.1.0" }
url = { version = "2.5.2" }
array-bytes = { version = "6.2.2" }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }

# Substrate Dependencies
# Please keey format such that:
# dependency-name = { git = "X", tag = "Y", default-features = false }
frame-benchmarking = { version = "41.0.0", default-features = false }
frame-benchmarking-cli = { version = "49.0.0", default-features = false }
frame-election-provider-support = { version = "41.0.0", default-features = false }
frame-executive = { version = "41.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.9.0", default-features = false }
frame-support = { version = "41.0.0", default-features = false, features = ["tuples-96"] }
frame-system = { version = "41.0.0", default-features = false }
frame-system-benchmarking = { version = "41.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "37.0.0", default-features = false }
frame-try-runtime = { version = "0.47.0", default-features = false }
pallet-authority-discovery = { version = "41.0.0", default-features = false }
pallet-authorship = { version = "41.0.0", default-features = false }
pallet-babe = { version = "41.0.0", default-features = false }
pallet-bags-list = { version = "40.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
pallet-bounties = { version = "40.0.0", default-features = false }
pallet-child-bounties = { version = "40.0.0", default-features = false }
pallet-collective = { version = "41.0.0", default-features = false }
pallet-contracts = { version = "41.0.0", default-features = false }
pallet-democracy = { version = "41.0.0", default-features = false }
pallet-election-provider-multi-phase = { version = "40.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "40.0.0", default-features = false }
pallet-elections-phragmen = { version = "42.0.0", default-features = false }
pallet-fast-unstake = { version = "40.0.0", default-features = false }
pallet-grandpa = { version = "41.0.0", default-features = false }
pallet-identity = { version = "41.0.0", default-features = false }
pallet-im-online = { version = "40.0.0", default-features = false }
pallet-indices = { version = "41.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "29.0.0", default-features = false }
pallet-membership = { version = "41.0.0", default-features = false }
pallet-migrations = { version = "11.0.0", default-features = false }
pallet-multisig = { version = "41.0.0", default-features = false }
pallet-nomination-pools = { version = "39.0.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "39.0.0", default-features = false }
pallet-nomination-pools-runtime-api = { version = "37.0.0", default-features = false }
pallet-offences = { version = "40.0.0", default-features = false }
pallet-offences-benchmarking = { version = "41.0.0", default-features = false }
pallet-preimage = { version = "41.0.0", default-features = false }
pallet-proxy = { version = "41.0.0", default-features = false }
pallet-recovery = { version = "41.0.0", default-features = false }
pallet-scheduler = { version = "42.0.0", default-features = false }
pallet-session = { version = "41.0.0", default-features = false, features = ["historical"] }
pallet-session-benchmarking = { version = "41.0.0", default-features = false }
pallet-staking = { version = "41.0.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false }
pallet-sudo = { version = "41.0.0", default-features = false }
pallet-timestamp = { version = "40.0.0", default-features = false }
pallet-tips = { version = "40.0.0", default-features = false }
pallet-transaction-payment = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "44.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "41.0.0", default-features = false }
pallet-treasury = { version = "40.0.0", default-features = false }
pallet-utility = { version = "41.0.0", default-features = false }
pallet-vesting = { version = "41.0.0", default-features = false }
pallet-conviction-voting = { version = "41.0.0", default-features = false }
pallet-referenda = { version = "41.0.0", default-features = false }
pallet-whitelist = { version = "40.0.0", default-features = false }
sc-authority-discovery = { version = "0.51.0", default-features = false }
sc-basic-authorship = { version = "0.50.0", default-features = false }
sc-chain-spec = { version = "44.0.0", default-features = false }
sc-cli = { version = "0.53.0", default-features = false }
sc-client-api = { version = "40.0.0", default-features = false }
sc-consensus = { version = "0.50.0", default-features = false }
sc-consensus-babe = { version = "0.51.0", default-features = false }
sc-consensus-babe-rpc = { version = "0.51.0", default-features = false }
sc-consensus-epochs = { version = "0.50.0", default-features = false }
sc-consensus-grandpa = { version = "0.36.0", default-features = false }
sc-consensus-grandpa-rpc = { version = "0.36.0", default-features = false }
sc-consensus-slots = { version = "0.50.0", default-features = false }
sc-executor = { version = "0.43.0", default-features = false }
sc-network = { version = "0.51.0", default-features = false }
sc-network-common = { version = "0.49.0", default-features = false }
sc-rpc = { version = "46.0.0", default-features = false }
sc-rpc-api = { version = "0.50.0", default-features = false }
sc-service = { version = "0.52.0", default-features = false }
sc-sync-state = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407", default-features = false }
sc-sync-state-rpc = { version = "0.51.0", default-features = false }
sc-sysinfo = { version = "43.0.0", default-features = false }
sc-telemetry = { version = "29.0.0", default-features = false }
sc-transaction-pool = { version = "40.0.0", default-features = false }
sc-transaction-pool-api = { version = "40.0.0", default-features = false }
sc-offchain = { version = "46.0.0", default-features = false }
sp-api = { version = "37.0.0", default-features = false }
sp-application-crypto = { version = "41.0.0", default-features = false }
sp-arithmetic = { version = "27.0.0", default-features = false }
sp-authority-discovery = { version = "37.0.0", default-features = false }
sp-block-builder = { version = "37.0.0", default-features = false }
sp-blockchain = { version = "40.0.0", default-features = false }
sp-consensus = { version = "0.43.0", default-features = false }
sp-consensus-babe = { version = "0.43.0", default-features = false }
sp-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-consensus-grandpa = { version = "24.0.0", default-features = false }
sp-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-core = { version = "37.0.0", default-features = false, features = ["serde"] }
sp-inherents = { version = "37.0.0", default-features = false }
sp-io = { version = "41.0.1", default-features = false }
sp-keystore = { version = "0.43.0", default-features = false }
sp-mmr-primitives = { version = "37.0.0", default-features = false }
sp-offchain = { version = "37.0.0", default-features = false }
sp-rpc = { version = "35.0.0", default-features = false }
sp-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-genesis-builder = { version = "0.18.0", default-features = false }
sp-session = { version = "39.0.0", default-features = false }
sp-staking = { version = "39.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "37.0.0", default-features = false }
sp-tracing = { version = "17.1.0", default-features = false }
sp-transaction-pool = { version = "37.0.0", default-features = false }
sp-transaction-storage-proof = { version = "37.0.0", default-features = false }
sp-trie = { version = "40.0.0", default-features = false }
sp-version = { version = "40.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "45.0.0", default-features = false }
substrate-state-trie-migration-rpc = { version = "44.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }
substrate-wasm-builder = { version = "27.0.0", default-features = false }
pallet-delegated-staking = { version = "8.0.0", default-features = false }

# Cere Dependenies
cere-client = { path = "node/client" }
cere-dev-runtime = { path = "runtime/cere-dev" }
cere-rpc = { path = "node/rpc" }
cere-runtime = { path = "runtime/cere" }
cere-runtime-common = { path = "runtime/common", default-features = false }
cere-service = { path = "node/service" }
ddc-primitives = { path = "primitives", default-features = false }
pallet-chainbridge = { path = "pallets/chainbridge", default-features = false }
pallet-ddc-clusters = { path = "pallets/ddc-clusters", default-features = false }
pallet-ddc-clusters-gov = { path = "pallets/ddc-clusters-gov", default-features = false }
pallet-ddc-customers = { path = "pallets/ddc-customers", default-features = false }
pallet-ddc-nodes = { path = "pallets/ddc-nodes", default-features = false }
pallet-ddc-payouts = { path = "pallets/ddc-payouts", default-features = false }
pallet-ddc-staking = { path = "pallets/ddc-staking", default-features = false }
pallet-erc20 = { path = "pallets/erc20", default-features = false }
pallet-erc721 = { path = "pallets/erc721", default-features = false }
pallet-origins = { path = "pallets/origins", default-features = false }
pallet-fee-handler = { path = "pallets/fee-handler", default-features = false }

# Hyperbridge
ismp = { default-features = false, version = "2506.1.0" }
ismp-grandpa = { default-features = false, version = "2506.1.0" }
pallet-hyperbridge = { default-features = false, version = "2506.1.0" }
pallet-ismp = { default-features = false, version = "2506.1.0" }
pallet-ismp-rpc = { default-features = false, version = "2506.1.0" }
pallet-ismp-runtime-api = { default-features = false, version = "2506.1.0" }
pallet-token-gateway = { default-features = false, version = "2506.1.0" }

[profile.release]
panic = "unwind"
