[workspace.package]
version = "7.3.3"
authors = ["Cerebellum-Network"]
edition = "2021"
homepage = "https://cere.network/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Cerebellum-Network/blockchain-node"

[workspace]
members = [
  "node/cli",
  "node/client",
  "node/rpc",
  "node/service",
  "pallets/chainbridge",
  "pallets/ddc-clusters",
  "pallets/ddc-customers",
  "pallets/ddc-nodes",
  "pallets/ddc-staking",
  "pallets/erc20",
  "pallets/erc721",
  "pallets/ddc-clusters-gov",
  "pallets/fee-handler",
  "pallets/origins",
  "pallets/pool-withdrawal-fix",
  "runtime/cere",
  "runtime/cere-dev",
  "contracts/customer-deposit",
]
resolver = "2"

[workspace.dependencies]
# 3rd-party dependencies
anyhow = { version = "1.0", default-features = false }
base64ct = { version = "1.6.0" }
blake2 = { version = "0.10.6", default-features = false }
byte-unit = { version = "4.0.19", default-features = false, features = ["u128"] }
chrono = { version = "0.4.31", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.30" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "^0.4.1", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false, features = ["server"] }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
polkadot-ckb-merkle-mountain-range = { version = "0.7.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.1", default-features = false }
serde_with = { version = "3", default-features = false, features = ["base64", "macros"] }
static_assertions = { version = "1.1.0" }
url = { version = "2.5.2" }
array-bytes = { version = "6.2.2" }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
scopeguard = { version = "1.2.0", default-features = false }

# Substrate Dependencies
# Please keey format such that:
# dependency-name = { git = "X", tag = "Y", default-features = false }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-election-provider-support = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false, features = ["tuples-96"] }
frame-system = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-authority-discovery = { version = "45.0.0", default-features = false }
pallet-authorship = { version = "45.0.0", default-features = false }
pallet-babe = { version = "45.0.0", default-features = false }
pallet-bags-list = { version = "44.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-bounties = { version = "44.0.0", default-features = false }
pallet-child-bounties = { version = "44.0.0", default-features = false }
pallet-collective = { version = "45.0.0", default-features = false }
pallet-contracts = { version = "45.0.0", default-features = false }
pallet-democracy = { version = "45.0.0", default-features = false }
pallet-election-provider-multi-phase = { version = "44.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "44.0.0", default-features = false }
pallet-elections-phragmen = { version = "46.0.0", default-features = false }
pallet-fast-unstake = { version = "44.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-identity = { version = "45.0.0", default-features = false }
pallet-im-online = { version = "44.0.0", default-features = false }
pallet-indices = { version = "45.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "33.0.0", default-features = false }
pallet-membership = { version = "45.0.0", default-features = false }
pallet-migrations = { version = "15.0.0", default-features = false }
pallet-multisig = { version = "45.0.0", default-features = false }
pallet-nomination-pools = { version = "43.0.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "43.0.0", default-features = false }
pallet-nomination-pools-runtime-api = { version = "41.0.0", default-features = false }
pallet-offences = { version = "44.0.0", default-features = false }
pallet-offences-benchmarking = { version = "45.0.0", default-features = false }
pallet-preimage = { version = "45.0.0", default-features = false }
pallet-proxy = { version = "45.0.0", default-features = false }
pallet-recovery = { version = "45.0.0", default-features = false }
pallet-scheduler = { version = "46.0.0", default-features = false }
pallet-session = { version = "45.0.0", default-features = false, features = ["historical"] }
pallet-session-benchmarking = { version = "45.0.0", default-features = false }
pallet-staking = { version = "45.0.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-tips = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-treasury = { version = "44.0.0", default-features = false }
pallet-utility = { version = "45.0.0", default-features = false }
pallet-vesting = { version = "45.0.0", default-features = false }
pallet-conviction-voting = { version = "45.0.0", default-features = false }
pallet-referenda = { version = "45.0.0", default-features = false }
pallet-whitelist = { version = "44.0.0", default-features = false }
sc-authority-discovery = { version = "0.55.0", default-features = false }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-chain-spec = { version = "48.0.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-consensus-babe = { version = "0.55.0", default-features = false }
sc-consensus-babe-rpc = { version = "0.55.0", default-features = false }
sc-consensus-epochs = { version = "0.54.0", default-features = false }
sc-consensus-grandpa = { version = "0.40.0", default-features = false }
sc-consensus-grandpa-rpc = { version = "0.40.0", default-features = false }
sc-consensus-slots = { version = "0.54.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.0", default-features = false }
sc-network-common = { version = "0.52.0", default-features = false }
sc-rpc = { version = "50.0.0", default-features = false }
sc-rpc-api = { version = "0.54.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-sync-state-rpc = { version = "0.55.0", default-features = false }
sc-sysinfo = { version = "46.0.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.0.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-application-crypto = { version = "44.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-authority-discovery = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus = { version = "0.46.0", default-features = false }
sp-consensus-babe = { version = "0.46.0", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false, features = ["serde"] }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keystore = { version = "0.45.0", default-features = false }
sp-mmr-primitives = { version = "40.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-rpc = { version = "37.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-staking = { version = "42.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
sp-tracing = { version = "19.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-transaction-storage-proof = { version = "40.0.0", default-features = false }
sp-trie = { version = "42.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-state-trie-migration-rpc = { version = "48.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }
substrate-wasm-builder = { version = "31.0.0", default-features = false }
ink = { version = "5.1.0", default-features = false }
pallet-delegated-staking = { version = "12.0.0", default-features = false }

# Cere Dependenies
cere-client = { path = "node/client" }
cere-dev-runtime = { path = "runtime/cere-dev" }
cere-rpc = { path = "node/rpc" }
cere-runtime = { path = "runtime/cere" }
cere-runtime-common = { path = "runtime/common", default-features = false }
cere-service = { path = "node/service" }
pallet-chainbridge = { path = "pallets/chainbridge", default-features = false }
pallet-ddc-clusters = { path = "pallets/ddc-clusters", default-features = false }
pallet-ddc-clusters-gov = { path = "pallets/ddc-clusters-gov", default-features = false }
pallet-ddc-customers = { path = "pallets/ddc-customers", default-features = false }
pallet-ddc-nodes = { path = "pallets/ddc-nodes", default-features = false }
pallet-ddc-staking = { path = "pallets/ddc-staking", default-features = false }
pallet-erc20 = { path = "pallets/erc20", default-features = false }
pallet-erc721 = { path = "pallets/erc721", default-features = false }
pallet-origins = { path = "pallets/origins", default-features = false }
pallet-pool-withdrawal-fix = { path = "pallets/pool-withdrawal-fix", default-features = false }
pallet-fee-handler = { path = "pallets/fee-handler", default-features = false }

# Cere External Dependencies
ddc-primitives = { git = "https://github.com/Cerebellum-Network/ddc-primitives.git", branch = "dev", default-features = false }
ddc-api = { git = "https://github.com/Cerebellum-Network/ddc-api.git", branch = "dev", default-features = false }
pallet-ddc-verification = { git = "https://github.com/Cerebellum-Network/ddc-verification.git", branch = "dev", default-features = false }
pallet-ddc-payouts = { git = "https://github.com/Cerebellum-Network/ddc-payouts.git", branch = "dev", default-features = false }

# Hyperbridge
ismp = { default-features = false, version = "2512.0.0" }
ismp-grandpa = { default-features = false, version = "2512.0.0" }
pallet-hyperbridge = { default-features = false, version = "2512.0.0" }
pallet-ismp = { default-features = false, version = "2512.0.0" }
pallet-ismp-rpc = { default-features = false, version = "2512.0.0" }
pallet-ismp-runtime-api = { default-features = false, version = "2512.0.0" }
pallet-token-gateway = { default-features = false, version = "2512.0.0" }

[profile.release]
panic = "unwind"
