[package]
name = "cere-cli"
version = "4.8.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.1", features = ["derive"], optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.30" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.30" }
sc-service = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.30" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.30" }
url = "2.4.1"

# Local
cere-client = { path = "../node/client", optional = true }
cere-service = { path = "../node/service", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ["cli", "cere-native"]
cli = [
  "clap",
  "sc-cli",
  "sc-service",
  "frame-benchmarking-cli",
  "try-runtime-cli",
  "cere-client",
]
runtime-benchmarks = ["cere-service/runtime-benchmarks"]
try-runtime = ["cere-service/try-runtime"]

cere-native = ["cere-service/cere-native"]
cere-dev-native = ["cere-service/cere-dev-native"]
